syntax = "proto3";

package api.notes.v1;

import "google/protobuf/empty.proto";

import "google/type/datetime.proto";

option go_package = "github.com/shft1/grpc-notes/pkg/api/notes/v1";

// NoteIDRequest - сообщение ID заметки
message NoteIDRequest {
  string uuid = 1;
}

// NoteCreateRequest - сообщение заметки для создания
message NoteCreateRequest {
  string title = 1;
  string desc = 2;
}

// Note - сообщение заметки
message Note {
  string uuid = 1;
  string title = 2;
  string desc = 3;
  bool is_del = 4;
  google.type.DateTime created_at = 5;
  google.type.DateTime updated_at = 6;
}

// NoteList - сообщение списка заметок
message NoteList {
  repeated Note notes = 1;
}

// NoteAPI - сервис заметок
service NoteAPI {
  // CreateNote - создание заметки
  rpc CreateNote(NoteCreateRequest) returns(Note) {};

  // GetNoteByID - получение заметки по ID
  rpc GetNoteByID(NoteIDRequest) returns(Note) {};

  // GetNotes - получение всех заметок
  rpc GetNotes(google.protobuf.Empty) returns(NoteList) {};

  // DeleteNoteByID - удалить заметку
  rpc DeleteNoteByID(NoteIDRequest) returns(Note) {};
}